HW-382: Fixed variables and spacing

--- a/scss/civicrm/_mixins.scss
+++ b/scss/civicrm/_mixins.scss
@@ -41,64 +41,62 @@
 /*
 * The styled-checkbox() CSS function designs individual checkbox
 */
-
 @mixin styled-checkbox() {
   height: 16px;
   position: relative;
 
   &::before {
+    background-color: $crm-white;
+    border: 1px solid $crm-darker-grayblue;
+    border-radius: $border-radius-base;
+    box-shadow: $crm-checkbox-shadow;
     content: '';
     cursor: pointer;
     display: inline-block;
-    width: 16px;
     height: 16px;
-    border-radius: 2px;
-    background-color: $crm-white;
-    box-shadow: $crm-checkbox-shadow;
-    border: 1px solid $crm-darker-grayblue;
+    width: 16px;
   }
 
   &:checked::after {
     @include fa-icon($font-size: 15px, $content: $fa-var-check, $color: $gray-darker);
     cursor: pointer;
     display: inline-block;
-    position: absolute;
     left: 2px;
-    top: 6px;
     margin-top: -5px;
+    position: absolute;
+    top: 6px;
   }
 }
 
 /*
 * The styled-checkbox() CSS function designs individual radio
 */
-
 @mixin styled-radio() {
   height: 14px;
   position: relative;
 
   &::before {
+    background-color: $crm-white;
+    border: solid 1px $crm-darker-grayblue;
+    border-radius: 50%;
+    box-shadow: $crm-checkbox-shadow;
     content: '';
     cursor: pointer;
     display: inline-block;
-    width: 14px;
     height: 14px;
-    background-color: $crm-white;
-    box-shadow: $crm-checkbox-shadow;
-    border: solid 1px $crm-darker-grayblue;
-    border-radius: 50%;
+    width: 14px;
   }
 
   &:checked::after {
+    background-color: $crm-copy;
+    border-radius: 50%;
     content: '';
     cursor: pointer;
     display: inline-block;
+    left: 4px;
+    height: 8px;
     position: absolute;
     top: 4px;
-    left: 4px;
     width: 8px;
-    height: 8px;
-    background-color: $crm-copy;
-    border-radius: 50%;
   }
 }
