--- a/scss/civicrm/common/_tabs.scss
+++ b/scss/civicrm/common/_tabs.scss
@@ -36,7 +36,7 @@
         font-size: $font-size-base;
         font-weight: $crm-font-weight-h3;
         padding-left: 5px;
-        margin: 4px 0px;
+        margin: 4px 0;
 
         &:before {
           font-family: $font-family-fontawesome;
